last bug fix for space management inside path